# nitro-espresso-integration

./: .gitmodules  .golangci.yml  Dockerfile  Dockerfile.aws-nitro-poster  Dockerfile.espresso  Makefile  README.md  aws-nitro-entrypoint.sh  ci_skip_tests  enclaver.yaml  flake.nix  go.mod  go.sum
arbcompress/: compress_common.go
arbitrator/: Cargo.toml
arbitrator/wasm-libraries/vid/: Cargo.toml
arbitrator/wasm-libraries/vid/src/: lib.rs
arbnode/: batch_poster.go  delayed.go  espresso_key_manager.go  espresso_key_manager_test.go  espresso_transaction_payload_signature_test.go  espresso_transaction_queue.go  espresso_utils.go  espresso_utils_test.go  hotshot_monitor.go  inbox_reader.go  inbox_test.go  inbox_tracker.go  light_client_reader.go  message_pruner_test.go  node.go  schema.go  seq_coordinator.go  sequencer_inbox.go  transaction_streamer.go
arbos/: block_processor.go  parse_l2.go  parse_l2_test.go
arbstate/: espresso_streamer.go  inbox.go  inbox_fuzz_test.go
arbutil/: context_util.go  espresso_utils.go  hotshot_monitor.go
arbvid/: arbvid_cgo.go  arbvid_common.go  arbvid_wasm.go
config/: jwt.hex  l2_chain_info.json  poster_config.json  sequencer_config.json  val_jwt.hex  validator_config.json
deploy/: deploy.go
espressocrypto/: espressocrypto_common.go  espressocrypto_wasm.go  native.go  native_test.go
espressocryptowasm/: espressocrypto_common.go  espressocrypto_wasm.go
espressostreamer/: espresso_streamer.go  espresso_streamer_test.go  perf_recorder.go  utils.go  utils_test.go
execution/: interface.go
migration/: migration-test.bash  (+1 more)
(+111 files in other folders)
