[package]
name = "vid"
version = "0.1.0"
edition = "2021"

[dependencies]
go-abi = { path = "../go-abi" }
# jf-primitives = { git = "https://github.com/EspressoSystems/jellyfish", features = [
#     "test-srs",
# ] }
# jf-utils = { git = "https://github.com/EspressoSystems/jellyfish", features = [
# ] }
jf-primitives = { git = "https://github.com/EspressoSystems/jellyfish", features = [
    "test-srs",
] }
#jf-utils = { path = "../../../../jellyfish", features = [] }

ark-bls12-381 = "0.4.0"
sha2 = { version = "0.10.1" }
derivative = "2.2"
bincode = "1.3.3"
derive_more = "0.99.17"
serde = { version = "1.0.195", features = ["derive"] }
trait-set = "0.3.0"
ark-std = { version = "0.4.0", default-features = false }
num-traits = "0.2.17"
rand_chacha = { version = "0.3.1", default-features = false }
ark-serialize = { version = "0.4", features = ["derive"] }

[lib]
crate-type = ["cdylib", "rlib"]
